SNRGY-3784 add support for timezone aggregations
